terraform/modules/lb-deployment/helm/geoip-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: geoip
  namespace: default
spec:
  plugin:
    geoip2:
      dbPath: "/geoip2/GeoLite2-City.mmdb"
      addCountryHeader: true
      addContinentHeader: true
      addRegionHeader: true
      addCityHeader: true
