terraform/modules/lb-deployment/helm/middleware-eu-header.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: eu-host-header
  namespace: default
spec:
  headers:
    customRequestHeaders:
      Host: "api.eu"
