terraform/modules/lb-deployment/helm/middleware-us-header.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: us-host-header
  namespace: default
spec:
  headers:
    customRequestHeaders:
      Host: "api.us"
