terraform/modules/lb-deployment/helm/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: us-remote-service
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.56.10
    ports:
      - port: 443
