terraform/modules/lb-deployment/helm/external-service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${region}-remote-service
  namespace: default
spec:
  type: ExternalName
  externalName: ${url}
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
